--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,8 @@ body {
     padding: 10px;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
 }
+
+#navbar header {
+    font-size: 1.5em;
+    margin-bottom: 20px;
+}
