--- a/styles.css
+++ b/styles.css
@@ -35,3 +35,8 @@ body {
 .main-section {
     margin-bottom: 40px;
 }
+
+.main-section header {
+    font-size: 1.25em;
+    margin-bottom: 10px;
+}
