--- a/styles.css
+++ b/styles.css
@@ -40,3 +40,11 @@ body {
     font-size: 1.25em;
     margin-bottom: 10px;
 }
+
+code {
+    display: block;
+    background-color: #f9f9f9;
+    padding: 10px;
+    border-left: 3px solid #ccc;
+    margin: 10px 0;
+}
